Update 12.0.2
- Refactored codebase and applied ktlint for consistency and readability
- Implemented ktlint to enforce coding standards, promoting a unified style across the project
- Updated to new versions of dependencies
- Introduced a new feature allowing developers to extend CommonObfustring for custom logical cipher Obfustring
- Fixed some tests